# StaticCalculation

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  main.cpp
.github/workflows/: ci.yml  ubuntu_ci.yml  windows_ci.yml
Application/: main.cpp
Application/Assets/: BUILD.bazel
Application/Assets/Coefficients/: fert_koeficijenti.json
Application/Backend/: BUILD.bazel  coefficient_parser.h  coefficient_service.cpp  coefficient_service.h  configuration_service.cpp  configuration_service.h  fert.h  fert_backend.h  page_service.cpp  page_service.h  util.h
Application/Backend/Serialization/: BUILD.bazel  data_serialization.h
Application/Backend/Serialization/Messages/: data.proto
Application/Core/: BUILD.bazel  configuration.h  event_system.cpp  event_system.h  events.h  paths.h  values.h
Application/GUI/: BUILD.bazel  constants.h  main_window.cpp  main_window.h  menu_bar.cpp  menu_bar.h
Application/GUI/Components/: button.cpp  button.h  coefficient_database.cpp  coefficient_database.h  coefficient_table.cpp  coefficient_table.h  combo_box.cpp  combo_box.h  fert_component.cpp  fert_component.h  ibase_component.h  info_popup_window.cpp  input_fields.h  input_text_field.h  new_component_popup.cpp  new_component_popup.h  reactions_table.cpp  reactions_table.h  text_with_padding.h
Application/GUI/Core/: id.h  image_loader.h  main_window.cpp  main_window.h  menu_bar.cpp  menu_bar.h
Application/GUI/Elements/: button.cpp  coefficient_table.cpp  coefficient_table.h  combo_box.cpp  combo_box.h  image_area.cpp  image_area.h  info_popup_window.h  reactions_table.cpp  reactions_table.h
Application/GUI/Pages/: coefficient_database.h  dummy_page.cpp  dummy_page.h  fert_page.cpp  fert_page.h  ibase_page.h  new_page_popup.cpp  new_page_popup.h  page_factory.cpp  page_factory.h
Application/GUI/Popups/: coefficient_database.cpp  coefficient_database.h  info_popup_window.cpp  info_popup_window.h  new_page_popup.cpp  new_page_popup.h  options_popup.cpp  options_popup.h
Scripts/: create_installer.nsi  create_release_package_windows.ps1
Scripts/InstallerComponents/: License.txt
