load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "main",
    srcs = ["Application/main.cpp"],
    data = [
        "//Application/Assets:copy_coefficients",
        "//Application/Assets:copy_fonts",
        "//Application/Assets:copy_images",
    ],
    deps = [
        "//Application/GUI:gui",
        "@imguilib//:imgui",
        "@spdloglib//:spdlog",
    ],
)
