load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "backend",
    srcs = glob([
        "*.h",
        "*.cpp",
    ]),
    hdrs = glob(["*.h"]),
    visibility = ["//visibility:public"],
    deps = [
        "//Application/Core:core",
        "@imguilib//:imgui",
        "@jsonlib//:json",
        "@spdloglib//:spdlog",
    ],
)
