load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "gui",
    srcs = glob([
        "Components/*",
        "Core/*",
        "Pages/*",
    ]),
    hdrs = glob([
        "Components/*.h",
        "Core/*.h",
        "Pages/*",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//Application/Backend:backend",
        "//Application/Core:core",
        "@imguilib//:imgui",
        "@spdloglib//:spdlog",
        "@stblib//:stb",
    ],
)
