load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "gui",
    srcs = glob([
        "Components/*",
        "Core/*",
        "Pages/*",
        "Popups/*",
    ]),
    hdrs = glob([
        "Components/*.h",
        "Core/*.h",
        "Pages/*",
        "Popups/*",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//Application/Backend:backend",
        "//Application/Core:core",
        "@imguilib//:imgui",
        "@spdloglib//:spdlog",
        "@stblib//:stb",
    ],
)
